--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <button id="theme-toggle">☀️</button>
     </header>
 
     <main>
@@ -45,14 +46,18 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project-card">
-                <h3>Project Title 1</h3>
-                <p>A short description of your project. Mention the technologies used (e.g., HTML, CSS, JS).</p>
-                <a href="#">View Project</a>
+                <h3>Notepad Reminder</h3>
+                <p>It allows one to have write and save notes and make a reminder at a certain date & time. 
+                    HTML, CSS, & JS is used.</p>
+                <a href="https://ntokozox.github.io/Notepad/">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Project Title 2</h3>
-                <p>Another project description.</p>
-                <a href="#">View Project</a>
+                <h3>Daily Quotes</h3>
+                <p>It allows one to get inspirational quotes from famous people.
+                    HTML, CSS, & JS is used.
+                </p>
+                <a href="https://ntokozox.github.io/Daily_Quotes/
+">View Project</a>
             </div>
         </section>
 
@@ -64,6 +69,10 @@
                 <a href="https://github.com/Ntokozox">GitHub</a>
                 <a href="https://x.com/Ntokozo_Xobongo">Twitter</a>
                 <a href="mailto:ntokozox99@gmail.com">Gmail</a>
+                <a href="https://web.facebook.com/ntokozo.xobongo.5/">Facebook</a>
+                <a href="tel:+27 664 611 352">Phone</a>
+                 
+                
             </div>
         </section>
     </main>
